--- a/Rylan's_Copy_of_Unit2ExercisesSF.ipynb
+++ b/Rylan's_Copy_of_Unit2ExercisesSF.ipynb
@@ -319,11 +319,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*3:*\n",
+        "For tracking each unique ball, we'll denote a number with each ball, so there'll be a red 1, red 2, white 1, and white 2 (simply written r1, r2, etc).\n",
+        "1. r1 - w1 - r1\n",
+        "2. r2 - w1 - r1\n",
+        "3. r1 - w2 - r1\n",
+        "4. r2 - w2 - r1\n",
+        "5. r1 - w1 - r2\n",
+        "6. r2 - w1 - r2\n",
+        "7. r1 - w2 - r2\n",
+        "8. r2 - w2 - r2\n",
         "\n",
-        "1. Red-red-white\n",
-        "2. Red-white-red\n",
-        "3. White-red-red\n",
+        "So there are 8 ways to select red-white-red.\n",
         "\n"
       ],
       "metadata": {
@@ -344,7 +350,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*One*"
+        "Everytime you pick a ball you have four options, two reds, and two whites. So when you pick out three balls, you're picking out of four, three times. So to get the total number of options would be 4^3, which is 64."
       ],
       "metadata": {
         "id": "69ScN4NYh6ks"
@@ -573,7 +579,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "*In both there are only two options: red or white; scores or doesn't. But in the FT lab we did it all through code where as this was more by hand (and calculator)*"
+        "*In both there are only two options: red or white; scores or doesn't. But in the FT lab we did it all through code where as this was more by hand (and calculator). Another difference is that here we are trying to predict the composition of the bag, whereas in the FT lab, we were trying to get the chances of making a free throw.*"
       ],
       "metadata": {
         "id": "CAmT3Bd34fhc"
