--- a/RylaBerrU4Proj.ipynb
+++ b/RylaBerrU4Proj.ipynb
@@ -28,7 +28,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#**Analyzing Spongebob Viewership on Episode Release**"
+        "#**Analyzing Spongebob Viewership on Episode Release from Season to Season**"
       ],
       "metadata": {
         "id": "6kxcEWOUv1N_"
